--- a/member/style.css
+++ b/member/style.css
@@ -9,7 +9,7 @@ body {
 
 .container {
   max-width: 600px;
-  margin: auto;
+  margin: 50px auto;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.4);
   border-radius: 12px;
@@ -26,7 +26,7 @@ h2 {
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
-  font-size: 17px;
+  font-size: 20px;
   margin-bottom: 15px;
   text-align: left;
   line-height: 1.6;
@@ -71,8 +71,8 @@ h2 {
 table.history-table {
   width: 100%;
   border-collapse: collapse;
-  font-size: 14px;
-  margin-top: 10px;
+  font-size: 16px;
+  margin-top: 12px;
 }
 
 .history-table th,
