--- a/member/style.css
+++ b/member/style.css
@@ -134,4 +134,7 @@ td:nth-child(5), th:nth-child(5) {
   white-space: normal;
   overflow: visible;
 }
+.history-section-wrapper {
+  overflow-x: auto;
+}
 
