--- a/member/style.css
+++ b/member/style.css
@@ -143,4 +143,10 @@ tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.08);
 }
 
+.btn.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+
 
