--- a/member/style.css
+++ b/member/style.css
@@ -164,6 +164,9 @@ tbody tr:hover {
 }
 
 .loading-box {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
   text-align: center;
   color: #fff;
   font-size: 18px;
