--- a/admin/style.css
+++ b/admin/style.css
@@ -20,3 +20,7 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+body {
+  background: #f0f0f0; /* หรือสีเทาอ่อน */
+}
