--- a/info_ad/main_admin/style.css
+++ b/info_ad/main_admin/style.css
@@ -83,5 +83,13 @@ p {
   align-items: center;
   z-index: 9999;
   padding: 20px;
+  transition: all 0.3s ease-in-out;
+  transform: scale(0.95);
+  opacity: 0;
+}
+
+.scan-popup:not(.hidden) {
+  transform: scale(1);
+  opacity: 1;
 }
 
