--- a/info_ad/main_admin/style.css
+++ b/info_ad/main_admin/style.css
@@ -44,6 +44,11 @@ p {
   white-space: nowrap;
 }
 
+button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .btn:hover {
   background: #005fa3;
 }
