--- a/info_ad/main_admin/style.css
+++ b/info_ad/main_admin/style.css
@@ -103,3 +103,11 @@ button:focus {
   opacity: 1;
 }
 
+#reader {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  max-height: 80vh;
+  background-color: #000;
+}
+
