--- a/info_ad/main_admin/style.css
+++ b/info_ad/main_admin/style.css
@@ -106,9 +106,16 @@ button:focus {
 
 #reader {
   flex: 1;
+  flex-grow: 1;
   width: 100%;
   height: 100%;
   max-height: 80vh;
   background-color: #000;
 }
 
+.scan-popup > input,
+.scan-popup > div {
+  margin-top: 16px;
+  width: 100%;
+  max-width: 320px;
+}
